# nsmpl

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html  nsmpl-introduction.md  package-lock.json  package.json  smpl-tool.desktop.in  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BounceStatus.tsx  CollapsedStrip.tsx  CoverageBar.tsx  EditPanel.tsx  EnvelopeStrip.tsx  FileBrowser.tsx  IdentityPanel.tsx  InfoPanel.tsx  LeafIcon.tsx  NostrPanel.tsx  Player.tsx  Section.tsx
src/lib/: nostr.ts  rating.ts  roots.ts  tauri.ts
