[package]
name = "smpl-tool"
version = "0.3.0-beta.7"
description = "Local audio sample tool with Nostr publishing"
authors = ["xjmzx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smpl_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Nostr identity: keypair generation, bech32 nsec/npub encoding. Matches ndisc.
nostr = "0.43"
# OS keychain (libsecret on Linux via secret-service). Matches ndisc.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

